Fix security vulnerability: upgrade TestNG from 7.4.0 to 7.10.2 and ensure Java 17 compatibility
Co-authored-by: lhalam <3837059+lhalam@users.noreply.github.com>